[package]
name = "kvs"
version = "0.1.0"
authors = ["four <ai-l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde_json = "1.0.39"
serde = { version = "1.0.89", features = ["derive"] }
sled = "0.34.6"
env_logger = "0.6.1"
structopt = "0.2.15"
log = "0.4.6"
criterion = "0.3.3"
crossbeam = "0.8"
rayon = "1.0.3"
crossbeam-skiplist = {version="0",git = "https://github.com/crossbeam-rs/crossbeam.git"}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = "0.6.5"
panic-control = "0.1.4"
crossbeam-utils = "0.8"

[[bench]]
name = "engine_bench"
harness = false